--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    //implementation 'com.google.android.gms:play-services-location:17.0.0'
+    // implementation "com.google.android.gms:play-services-location:15.0.1"
     testImplementation 'junit:junit:4.+'
+    //  implementation 'com.google.android.gms:play-services:11.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
 }
