--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
     //implementation 'com.google.android.gms:play-services-location:17.0.0'
     // implementation "com.google.android.gms:play-services-location:15.0.1"
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     testImplementation 'junit:junit:4.+'
     //  implementation 'com.google.android.gms:play-services:11.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
