--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,12 @@
             android:value=".MainActivity" />
         </activity>
 
+        <activity android:name=".RadioSelectedShopActivity"
+            android:parentActivityName=".MainActivity"> <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
+        </activity>
+
         <activity android:name=".ShopListActivity"
             android:parentActivityName=".MainActivity"> <meta-data
             android:name="android.support.PARENT_ACTIVITY"
@@ -86,12 +92,7 @@
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".MainActivity" /> </activity>
 
-        <activity android:name=".FilterMapActivity"
-            android:parentActivityName=".MainActivity"><meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".MainActivity" /> </activity>
-
-        <activity android:name=".SignUpActivity"
+          <activity android:name=".SignUpActivity"
             android:parentActivityName=".MainActivity"> <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".MainActivity" />
