--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.farmstorelocator">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -14,6 +16,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <!--
@@ -86,7 +89,7 @@
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".MainActivity" /> </activity>
 
-          <activity android:name=".SignUpActivity"
+        <activity android:name=".SignUpActivity"
             android:parentActivityName=".MainActivity"> <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".MainActivity" />
